Fixed ssh connection between docker and vms

--- a/infrastructure/Dockerfile
+++ b/infrastructure/Dockerfile
@@ -5,7 +5,7 @@ USER root
 RUN sed -i 's|^mirrorlist=|#mirrorlist=|g' /etc/yum.repos.d/CentOS-* && \
     sed -i 's|^#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-* && \
     yum clean all
-RUN yum update -y && yum upgrade -y
+RUN yum update -y
 RUN yum install gcc make zlib-devel bzip2 bzip2-devel readline-devel sqlite sqlite-devel openssl-devel openssh-server openssh-clients libffi-devel wget tar -y && yum clean all
 
 RUN cd /usr/src && \
@@ -22,13 +22,12 @@ RUN export USER_BASE_PATH=$(python3 -m site --user-base) && \
 RUN python3 -m pip install --user ansible
 RUN python3 -m site --user-base
 
-COPY docker_vagrant_key /root/.ssh/id_rsa
-COPY known_hosts /root/.ssh/known_hosts
+COPY id_rsa /root/.ssh/id_rsa
 RUN chmod 700 /root/.ssh
-RUN chmod 600 /root/.ssh/*
+RUN chmod 400 /root/.ssh/*
 
 RUN printf "Host admin_server\n  HostName 192.168.56.10\n  User vagrant\n  IdentityFile /root/.ssh/id_rsa\n  StrictHostKeyChecking no\n\nHost managed_server\n  HostName 192.168.56.11\n  User vagrant\n  IdentityFile /root/.ssh/id_rsa\n  StrictHostKeyChecking no\n" >> /root/.ssh/config
 
-WORKDIR /root
+WORKDIR /ansible
 
 CMD ["bash"]
