--- a/infrastructure/Vagrantfile
+++ b/infrastructure/Vagrantfile
@@ -31,7 +31,7 @@ Vagrant.configure("2") do |config|
     sudo make
     sudo make altinstall
     sudo ln -s /usr/local/bin/python3.9 /usr/local/bin/python3
-    echo "$(cat /vagrant/docker_vagrant_key.pub)" >> /home/vagrant/.ssh/authorized_keys
+    echo "$(cat /vagrant/id_rsa.pub)" >> /home/vagrant/.ssh/authorized_keys
     sudo chmod 600 /home/vagrant/.ssh/authorized_keys
     sudo chown vagrant:vagrant /home/vagrant/.ssh/authorized_keys
   SHELL
