--- a/ansible/roles/setup-weblogic/vars/main.yml
+++ b/ansible/roles/setup-weblogic/vars/main.yml
@@ -1,13 +1,26 @@
-# Home vars
-oracle_home: "/app/oracle/"
-domain_home: "/app/oracle/user_projects/domains"
+---
+oracle_home: "/app/oracle"
 java_home: "/app/java"
+application_home: "/app/user_projects/applications"
+app_home: "/app"
+inventory_home: "{{ app_home }}/oraInsta.loc"
 
-# Credentials
-domain_name: "base_domain"
-domain_username: "weblogic"
-domain_password: "weblogic"
+machine_user: "weblogic"
 
-# Admin port
-admin_port: 7001
-admin_port_ssl: 7003
+weblogic_user: "weblogic"
+weblogic_pass: "weblogic1"
+
+install_type: "WebLogic Server"
+
+admin_server_address: "192.168.56.10"
+admin_server_name: "AdminServer"
+admin_server_port: 7001
+weblogic_domain: "base_domain"
+domain_home: "/app/user_projects/domains/{{ weblogic_domain }}"
+
+machine_name: "machine1"
+managed_server_name: "machine1"
+managed_server_port: "8001"
+managed_machine_address: "192.168.56.11"
+
+nodemanager_port: 5556
