--- a/infrastructure/Vagrantfile
+++ b/infrastructure/Vagrantfile
@@ -9,11 +9,20 @@ Vagrant.configure("2") do |config|
   config.vm.define "admin_server" do |admin|
     admin.vm.hostname = "weblogic-admin"
     admin.vm.network "private_network", ip: "192.168.56.10", name: "VirtualBox Host-Only Ethernet Adapter"
+    admin.vm.network "forwarded_port", guest: 7001, host: 7001
+
+    admin.vm.provision "shell", inline: <<-SHELL
+      echo "192.168.56.11 managed_server" >> /etc/hosts
+    SHELL
   end
 
   config.vm.define "managed_server" do |managed|
     managed.vm.hostname = "weblogic-managed"
     managed.vm.network "private_network", ip: "192.168.56.11", name: "VirtualBox Host-Only Ethernet Adapter"
+  
+    managed.vm.provision "shell", inline: <<-SHELL
+      echo "192.168.56.10 admin_server" >> /etc/hosts
+    SHELL
   end
 
   config.vm.provision "shell", inline: <<-SHELL
@@ -21,7 +30,7 @@ Vagrant.configure("2") do |config|
     sudo sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
     sudo yum update -y
     sudo yum upgrade -y
-    sudo yum install epel-release gcc openssl-devel bzip2-devel libffi-devel zlib-devel wget -y 
+    sudo yum install epel-release gcc openssl-devel bzip2-devel libffi-devel zlib-devel wget unzip rsync -y 
     cd /usr/local/src
     sudo wget https://www.python.org/ftp/python/3.9.6/Python-3.9.6.tgz
     sudo tar -xvf Python-3.9.6.tgz
@@ -31,8 +40,12 @@ Vagrant.configure("2") do |config|
     sudo make
     sudo make altinstall
     sudo ln -s /usr/local/bin/python3.9 /usr/local/bin/python3
-    echo "$(cat /vagrant/id_rsa.pub)" >> /home/vagrant/.ssh/authorized_keys
+    cat /vagrant/id_rsa.pub >> /home/vagrant/.ssh/authorized_keys
     sudo chmod 600 /home/vagrant/.ssh/authorized_keys
     sudo chown vagrant:vagrant /home/vagrant/.ssh/authorized_keys
+
+    sudo cp /vagrant/id_rsa /home/vagrant/.ssh/id_rsa
+    sudo chmod 600 /home/vagrant/.ssh/id_rsa
+    sudo chown vagrant:vagrant /home/vagrant/.ssh/id_rsa
   SHELL
 end
