--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -1,9 +1,9 @@
 ---
-# - hosts: weblogic
-#   become: yes
-#   roles:
-#     - setup-weblogic
-#     - manage-cert
+- hosts: weblogic
+  become: yes
+  roles:
+    - setup-weblogic
+    - manage-cert
 
 - hosts: tomcat
   become: yes
