Remove unnecessary domain template and cleanup WebLogic installation files

--- a/ansible/roles/setup-weblogic/tasks/create-domain.yml
+++ b/ansible/roles/setup-weblogic/tasks/create-domain.yml
@@ -41,3 +41,8 @@
     dest: "/tmp/"
     mode: pull
   delegate_to: "{{ groups['managed'][0] }}"
+
+- name: "Remove domain template"
+  file:
+    path: "{{ app_home }}/create_domain.py"
+    state: absent
