Add Tomcat setup role and enhance management tasks; include backup, validation, and cleanup processes

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -10,3 +10,9 @@
   become: yes
   roles:
     - { role: manage-cert, tags: ["certificates"] }
+
+- name: Setup Tomcat Environment
+  hosts: tomcat
+  become: yes
+  roles:
+    - setup-tomcat
