--- a/infrastructure/Vagrantfile
+++ b/infrastructure/Vagrantfile
@@ -1,11 +1,16 @@
+# Configure Vagrant settings
 Vagrant.configure("2") do |config|
+  # Base box and SSH configuration
   config.vm.box = "centos/7"
   config.ssh.insert_key = false
+
+  # VirtualBox provider settings
   config.vm.provider "virtualbox" do |vb|
     vb.memory = 2048
     vb.cpus = 2
   end
 
+  # Admin Server VM configuration 
   config.vm.define "admin_server" do |admin|
     admin.vm.hostname = "weblogic-admin"
     admin.vm.network "private_network", ip: "192.168.56.10", name: "VirtualBox Host-Only Ethernet Adapter"
@@ -16,6 +21,7 @@ Vagrant.configure("2") do |config|
     SHELL
   end
 
+  # Managed Server VM configuration
   config.vm.define "managed_server" do |managed|
     managed.vm.hostname = "weblogic-managed"
     managed.vm.network "private_network", ip: "192.168.56.11", name: "VirtualBox Host-Only Ethernet Adapter"
@@ -25,18 +31,23 @@ Vagrant.configure("2") do |config|
     SHELL
   end
 
+  # Tomcat Server VM configuration
   config.vm.define "tomcat_server" do |tomcat|
     tomcat.vm.hostname = "tomcat-server"
     tomcat.vm.network "private_network", ip: "192.168.56.12", name: "VirtualBox Host-Only Ethernet Adapter"
     tomcat.vm.network "forwarded_port", guest: 8080, host: 8080
   end
 
+  # Common provisioning for all VMs
   config.vm.provision "shell", inline: <<-SHELL
+    # Fix CentOS repo URLs
     sudo sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-*
     sudo sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
-    # sudo yum update -y
-    # sudo yum upgrade -y
+
+    # Install required packages
     sudo yum install epel-release gcc openssl-devel bzip2-devel libffi-devel zlib-devel wget unzip rsync -y 
+
+    # Install Python 3.9.6
     cd /usr/local/src
     sudo wget https://www.python.org/ftp/python/3.9.6/Python-3.9.6.tgz
     sudo tar -xvf Python-3.9.6.tgz
@@ -46,6 +57,8 @@ Vagrant.configure("2") do |config|
     sudo make
     sudo make altinstall
     sudo ln -s /usr/local/bin/python3.9 /usr/local/bin/python3
+
+    # Configure SSH keys
     cat /vagrant/id_rsa.pub >> /home/vagrant/.ssh/authorized_keys
     sudo chmod 600 /home/vagrant/.ssh/authorized_keys
     sudo chown vagrant:vagrant /home/vagrant/.ssh/authorized_keys
@@ -55,6 +68,7 @@ Vagrant.configure("2") do |config|
     sudo chown vagrant:vagrant /home/vagrant/.ssh/id_rsa
     export PATH=$PATH:/usr/local/bin
 
+    # Install required Python packages
     python3 -m pip install cryptography
   SHELL
 end
