Update Docker build steps in main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,11 +8,11 @@ jobs:
     name: Create docker container
     runs-on: ubuntu-latest
 
-    steps: 
-    - uses: actions/checkout@v4
+    steps:
+      - uses: actions/checkout@v4
 
-    - name: Build docker image
-      run: docker build . --file Dockerfile --tag ansible-control:$(date +%s)
-    
-      
-  
+      - name: Docker Setup Buildx
+        uses: docker/setup-buildx-action@v3.9.0
+
+      - name: Build docker image
+        run: docker build infrastructure/Dockerfile --tag ansible-control:latest
